--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,13 @@ body {
     letter-spacing: 0.03em;
     color: var(--secondary-color);
 }
+.header,
+.hero,
+.benefits,
+.work,
+.team,
+.footer,
+.portfolio{outline: 2px solid green;}
 
 .title {
     color: var(--pimary-color);
@@ -35,6 +42,7 @@ body {
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
+    
 }
 
 .logo {
@@ -77,6 +85,7 @@ body {
 .hero,
 .footer {
     background-color: var(--bg-color)
+        
 }
 
 .hero-title {
@@ -105,7 +114,9 @@ body {
 }
 
 /*benefits*/
-.benefits {}
+.benefits {
+    
+}
 
 .hidden-title {
     display: none;
@@ -146,7 +157,9 @@ body {
 }
 
 /*footer*/
-.footer {}
+.footer {
+    
+}
 
 .logo-white {
     color: var(--white);
